[package]
name = "llm-novel-translator"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = {version = "4.6.1", features = ["derive"]}
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
